--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,15 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#1F978B</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="other">#E0F5FF</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#1055CC</color>
+    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorTrandingStart">#008098</color>
+    <color name="colorTrandingEnd">#96C93D</color>
+    <color name="lightWhite">#f2f5f8</color>
+    <color name="colorDivider">#D6D6D6</color>
 </resources>
